increase contrast on some colors to fix a11y issues

--- a/src/pretix/static/pretixbase/scss/_variables.scss
+++ b/src/pretix/static/pretixbase/scss/_variables.scss
@@ -9,19 +9,19 @@
 $gray-darker: lighten(#000, 13.5%);
 $gray-dark: lighten(#000, 20%);
 $gray: lighten(#000, 33.5%);
-$gray-light: lighten(#000, 60%);
+$gray-light: lighten(#000, 55%);
 $gray-lighter: lighten(#000, 93.5%);
 $gray-lightest: lighten(#000, 97.25%);
 
 $font-family-sans-serif:  "Open Sans", "OpenSans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $text-color: #222222 !default;
-$text-muted: #999999 !default;
+$text-muted: #767676 !default;
 
 $brand-primary: #7f5a91 !default;
 $brand-success: #50a167 !default;
 $brand-info: #5f9cd4 !default;
 $brand-warning: #ffb419 !default;
-$brand-danger: #d36060 !default;
+$brand-danger: #c44f4f !default;
 
 $btn-default-border: #CCCCCC;
 
